[gd_scene load_steps=31 format=2]

[ext_resource path="res://sprites/Main Scene Objects/Wood Flooring V3.png" type="Texture" id=1]
[ext_resource path="res://sprites/Main Scene Objects/Bed 1.png" type="Texture" id=2]
[ext_resource path="res://sprites/Main Scene Objects/wooden door frame.png" type="Texture" id=3]
[ext_resource path="res://sprites/Main Scene Objects/sunflower.png" type="Texture" id=4]
[ext_resource path="res://sprites/Main Scene Objects/Cupboard 1.png" type="Texture" id=5]
[ext_resource path="res://sprites/Main Scene Objects/Gold Fish.png" type="Texture" id=6]
[ext_resource path="res://sprites/Main Scene Objects/Toilet.png" type="Texture" id=7]
[ext_resource path="res://sprites/Main Scene Objects/Floor Bathroom V2.png" type="Texture" id=8]
[ext_resource path="res://sprites/Main Scene Objects/Mirror.png" type="Texture" id=9]
[ext_resource path="res://props/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/Main Scene Objects/Bathroom Wall V2.png" type="Texture" id=11]
[ext_resource path="res://sprites/Main Scene Objects/Wooden Wall V2.png" type="Texture" id=12]
[ext_resource path="res://sprites/Main Scene Objects/Broken FloorV2 .png" type="Texture" id=13]
[ext_resource path="res://scenes/Home1.gd" type="Script" id=14]
[ext_resource path="res://scenes/prototype/Sword.tscn" type="PackedScene" id=15]
[ext_resource path="res://fonts/arlrdbd.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://scenes/Mirror2.gd" type="Script" id=17]

[sub_resource type="TileSet" id=1]
0/name = "Wood Flooring V3.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Floor Bathroom V2.png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Bathroom Wall V2.png 2"
2/texture = ExtResource( 11 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Broken FloorV2 .png 3"
3/texture = ExtResource( 13 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Wooden Wall V2.png 4"
4/texture = ExtResource( 12 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.52231, 6.98134 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 64, -16 )
b = Vector2( -160, -16 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( -160, 96 )
b = Vector2( 0, 96 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( -160, 96 )
b = Vector2( -160, -16 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 0.5849, 33.3098 )
b = Vector2( 0, 96 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( 64, 64 )
b = Vector2( 0, 64 )

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( 64, -16 )
b = Vector2( 64.1676, 31.1566 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 8 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 16 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 6.19891, 8 )

[sub_resource type="DynamicFont" id=12]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 16 )

[sub_resource type="Animation" id=13]
resource_name = "Fade_In"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2.5, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Node2D" type="Node2D"]
modulate = Color( 1, 1, 1, 0.92 )
script = ExtResource( 14 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -856.0
margin_top = -552.0
margin_right = 935.0
margin_bottom = 562.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.4, 0.4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -5, 4, 0, -4, 4, 0, -3, 4, 0, -2, 4, 0, -1, 4, 0, -65536, 2, 0, -65535, 2, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 1, 0, 1, 1, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0 )

[node name="Bed 1" type="Sprite" parent="."]
position = Vector2( -144, 16 )
scale = Vector2( 0.372531, 0.372531 )
texture = ExtResource( 2 )

[node name="Cupboard 1" type="Sprite" parent="."]
position = Vector2( -120, -0.023242 )
scale = Vector2( 0.28128, 0.270778 )
texture = ExtResource( 5 )

[node name="sunflower" type="Sprite" parent="."]
position = Vector2( -117.732, -6.73952 )
scale = Vector2( 0.159282, 0.144522 )
texture = ExtResource( 4 )

[node name="wooden door frame" type="Sprite" parent="."]
position = Vector2( -40, -8 )
scale = Vector2( 0.224243, 0.203463 )
texture = ExtResource( 3 )

[node name="Cupboard 2" type="Sprite" parent="."]
position = Vector2( -15.9995, 0.529732 )
scale = Vector2( 0.243138, 0.23406 )
texture = ExtResource( 5 )

[node name="Gold Fish" type="Sprite" parent="."]
position = Vector2( -14.224, -7.07308 )
scale = Vector2( 0.213815, 0.196514 )
texture = ExtResource( 6 )

[node name="Toilet" type="Sprite" parent="."]
position = Vector2( 55.1338, 3.9156 )
scale = Vector2( 0.69948, 0.61993 )
texture = ExtResource( 7 )

[node name="Mirror" type="Sprite" parent="."]
position = Vector2( 31.7993, -10.0497 )
scale = Vector2( 0.905719, 0.905719 )
texture = ExtResource( 9 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -118.935, -0.44545 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 55.8885, 2.92194 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -15.1072, -0.44545 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0.0343781, 0.337952 )
shape = SubResource( 3 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 4 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 5 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 6 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.594604, -31.4658 )
shape = SubResource( 7 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 8 )

[node name="Door" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2( -40, -8 )
shape = SubResource( 9 )

[node name="RichTextLabel" type="RichTextLabel" parent="Door"]
margin_left = -56.1409
margin_top = -26.8016
margin_right = 114.859
margin_bottom = 6.19842
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/normal_font = SubResource( 10 )
text = "Open Door [E]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mirror2" type="Area2D" parent="." groups=[
"Mirror",
]]
script = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mirror2"]
position = Vector2( 31.2054, -14.6216 )
shape = SubResource( 11 )

[node name="RichTextLabel" type="RichTextLabel" parent="Mirror2"]
margin_left = 11.5455
margin_top = -39.3318
margin_right = 251.546
margin_bottom = 0.668179
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/normal_font = SubResource( 12 )
bbcode_text = "Interact Mirror [E]"
text = "Interact Mirror [E]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemWeapon" parent="." instance=ExtResource( 15 )]
position = Vector2( -231.533, 16.9879 )

[node name="Player" parent="." groups=[
"Player",
] instance=ExtResource( 10 )]
position = Vector2( -142.959, 14.8263 )

[node name="FadeIn" type="AnimationPlayer" parent="."]
anims/Fade_In = SubResource( 13 )

[connection signal="body_entered" from="Door" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Door" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Mirror2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Mirror2" to="." method="_on_Area2D2_body_exited"]
[connection signal="animation_finished" from="FadeIn" to="Player" method="_on_FadeIn_animation_finished"]
